--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
   <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 
   <meta name="author" content="{{ site.compass.author }}">
-  <meta name="description" content="{{ site.compass.tagline }}"/>
+  <meta name="description" content="{{ site.compass.description }}"/>
 
   <meta property="og:title" content="{{ site.compass.tagline }}"/>
   <meta property="og:url" content="{{ site.url }}{{ page.url }}"/>
