--- a/_includes/content.html
+++ b/_includes/content.html
@@ -16,4 +16,9 @@
   <li class="main-list-item">
     <span class="fa fa-key fa-lg main-list-item-icon"></span>
     <a href="https://keybase.io/tonyo/">Keybase</a>
+  </li>
+  <li class="main-list-item">
+    <span class="fa fa-envelope fa-lg main-list-item-icon"></span>
+    <a href="mailto:contact@tonyo.info">Email</a>
+  </li>
 </ul>
