Change some wording

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,7 +1,7 @@
 <h2>About</h2>
 <p>I'm a Software Engineer specializing in DevOps, security, and backend development.</p>
 
-<p>I did my studies at <a href="http://english.spbu.ru/">SPbSU</a> (BSc), <a href="http://ic.epfl.ch/">EPFL</a> (MSc), and <a href="https://www.ethz.ch/en.html">ETH Zurich</a>. A former leader of the SPbSU <a href="https://ctftime.org/ctf-wtf/">CTF</a> security team PeterPen.</p>
+<p>I did my studies at <a href="http://english.spbu.ru/">SPbSU</a> (BSc), <a href="http://ic.epfl.ch/">EPFL</a> (MSc), and <a href="https://www.ethz.ch/en.html">ETH Zurich</a>. I was also a leader of the SPbSU <a href="https://ctftime.org/ctf-wtf/">CTF</a> security team PeterPen at some point.</p>
 
 <p>Some things I admire: open source, llamas (as well as <a href="/images/alpaca_brown.jpg">alpacas</a>!), and <a href="https://en.wikipedia.org/wiki/Massive_open_online_course">MOOCs</a>.
 </p>
