--- a/_includes/content.html
+++ b/_includes/content.html
@@ -11,7 +11,7 @@
 <ul class="fa-ul main-list">
   <li class="main-list-item">
     <span class="fa fa-github fa-lg main-list-item-icon"></span>
-    <a href="https://github.com/rev112/">GitHub</a>
+    <a href="https://github.com/tonyo/">GitHub</a>
   </li>
   <li class="main-list-item">
     <span class="fa fa-key fa-lg main-list-item-icon"></span>
